Fix docs homepage BG position on mobile

--- a/docs/.vitepress/theme/style.css
+++ b/docs/.vitepress/theme/style.css
@@ -354,7 +354,7 @@ i {
 .VPHome {
   background-image: url('/images/home-bg.png');
   background-repeat: no-repeat;
-  background-position: center 3rem;
+  background-position: center 4rem;
   background-size: 200% auto;
 }
 
